--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ description = "Raghul Mohankumar's personal website"
 keywords = "electrical engineer,new product development,personal"
 info = "Passionate Electrical Engineer and New Product Development Enthusiast"
 avatarURL = "img/avatar.jpg"
-#gravatar = "john.doe@example.com"
+gravatar = "john.doe@example.com"
 footerContent = "Everything is connected"
 dateFormat = "January 2, 2006"
 hideFooter = false
