--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ hideColorSchemeToggle = false
 # Series see also post count
 maxSeeAlsoItems = 5
 # Enable Twemoji
-enableTwemoji = true
+enableTwemoji = false
 # Custom CSS
 customCSS = []
 # Custom SCSS
